--- a/MinersProsperity/src/main/resources/assets/minersprosperity/lang/en_us.lang
+++ b/MinersProsperity/src/main/resources/assets/minersprosperity/lang/en_us.lang
@@ -102,6 +102,10 @@ gui.redstone_ignored.name=Ignored
 gui.redstone_low_signal.name=Low Signal
 gui.redstone_high_signal.name=High Signal
 gui.slots_configuration.name=Slots Configuration
+gui.upgrades.name=Upgrades
+gui.energy_stored=Energy Stored
+gui.energy_usage=Energy Usage
+gui.max_energy_input=Max Energy Input
 gui.slot_ignored.name=Ignored
 gui.slot_input.name=Input
 gui.slot_output.name=Output
